# Tutorials-Resources

LLM_para_Proyectos_en_Ciencia_de_Datos/: README.md
LLM_para_Proyectos_en_Ciencia_de_Datos/agent_chatbot/: .env.example  .gitignore  README.md  app.py  pyproject.toml  start_classroom.command
LLM_para_Proyectos_en_Ciencia_de_Datos/agent_chatbot/adk_apps/action_specialist/: agent.py
LLM_para_Proyectos_en_Ciencia_de_Datos/agent_chatbot/adk_apps/data_specialist/: agent.py
LLM_para_Proyectos_en_Ciencia_de_Datos/agent_chatbot/adk_apps/orchestrator/: agent.py
LLM_para_Proyectos_en_Ciencia_de_Datos/agent_chatbot/adk_apps/response_specialist/: agent.py
LLM_para_Proyectos_en_Ciencia_de_Datos/agent_chatbot/adk_apps/web_researcher/: agent.py
LLM_para_Proyectos_en_Ciencia_de_Datos/agent_chatbot/mcp_server/: server.py
LLM_para_Proyectos_en_Ciencia_de_Datos/agent_chatbot/src/enterprise_chatbot/: __init__.py  adk_factory.py  database.py  demo_runner.py  models.py  tools.py  web_search.py
LLM_para_Proyectos_en_Ciencia_de_Datos/agent_chatbot/tests/: test_database_and_tools.py  test_runner.py
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/: .env.example  .gitignore  README.md  agent.py  app.py  pyproject.toml
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/adk_apps/: README.md
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/adk_apps/e01_baseline/: agent.py  experiment.md  prompt.md
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/adk_apps/e02_operational_prompt/: agent.py  experiment.md  prompt.md
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/adk_apps/e03_tool_contracts/: agent.py  experiment.md  prompt.md
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/adk_apps/e04_guardrails/: agent.py  experiment.md
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/adk_apps/e05_thinking_low/: agent.py  experiment.md  prompt.md
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/adk_apps/e06_thinking_medium/: agent.py  experiment.md
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/adk_apps/e07_thinking_high/: agent.py  experiment.md
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/adk_apps/e08_local_temp_0/: agent.py  experiment.md  prompt.md
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/adk_apps/e09_local_temp_03/: agent.py  experiment.md  prompt.md
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/adk_apps/e10_local_temp_07/: agent.py  experiment.md
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/adk_apps/e11_local_temp_10/: agent.py  experiment.md
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/data/: cases.json
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/docs/: mlflow_judges.md
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/prompts/: v1_general.md  v2_operational.md
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/src/ticket_agents/: __init__.py  adk_factory.py  adk_mlflow.py  cli.py  configs.py  database.py  guardrails.py  mlflow_support.py  prompts.py  runner.py  tools.py  tracking.py  web_entry.py
LLM_para_Proyectos_en_Ciencia_de_Datos/agents/tests/: test_configs.py  test_database.py  test_guardrails.py  test_prompts.py  test_tools.py  test_tracking.py  test_web_agents.py
LLM_para_Proyectos_en_Ciencia_de_Datos/langgraph_tutorial/: .env.example  .gitignore  01_state_graph.py  02_tool_agent.py  03_durable_hitl.py  04_architecture_map.py  README.md  classroom_app.py  classroom_checkpoints.sqlite-shm  classroom_checkpoints.sqlite-wal  langgraph-agent-flow.html  langgraph-tutorial-flows.html  pyproject.toml  start_classroom.command
LLM_para_Proyectos_en_Ciencia_de_Datos/langgraph_tutorial/prompts/: store_agent.md  ticket_agent.md
LLM_para_Proyectos_en_Ciencia_de_Datos/langgraph_tutorial/tests/: test_agents.py  test_state_graph.py
LLM_para_Proyectos_en_Ciencia_de_Datos/metrics/: .env.example  .gitignore  README.md  pyproject.toml
LLM_para_Proyectos_en_Ciencia_de_Datos/metrics/data/: rag_eval.json  ticket_eval.json
LLM_para_Proyectos_en_Ciencia_de_Datos/metrics/notebooks/: 01_deterministic_response_metrics.ipynb  02_semantic_and_operational_metrics.ipynb  03_rag_retrieval_metrics.ipynb  04_end_to_end_rag_evaluation.ipynb
LLM_para_Proyectos_en_Ciencia_de_Datos/metrics/src/metrics_course/: __init__.py  datasets.py  deterministic.py  gemini.py  gemini_generation.py  operational.py  perplexity.py  rag_judge.py  real_retrieval.py  reporting.py  retrieval.py
LLM_para_Proyectos_en_Ciencia_de_Datos/metrics/tests/: test_datasets.py  test_deterministic.py  test_perplexity.py  test_rag_integration_helpers.py  test_real_retrieval.py  test_retrieval.py
LLM_para_Proyectos_en_Ciencia_de_Datos/rag/: .env.example  .gitignore  README.md  pyproject.toml
LLM_para_Proyectos_en_Ciencia_de_Datos/rag/chatbot/: __init__.py  chat.py  service.py
LLM_para_Proyectos_en_Ciencia_de_Datos/rag/chatbot/pages/: 1_Laboratorio_de_chunking.py  2_Laboratorio_de_reranking.py  3_Anatomia_del_reranking.py  4_Experimentos_RAG.py
LLM_para_Proyectos_en_Ciencia_de_Datos/rag/experiments/: evaluation_set.json  run.py
LLM_para_Proyectos_en_Ciencia_de_Datos/rag/notebooks/: 01_rag_desde_cero.ipynb  02_rag_con_chromadb.ipynb  03_comparacion_herramientas_rag.ipynb  04_evaluacion_extractores_pdf.ipynb
LLM_para_Proyectos_en_Ciencia_de_Datos/rag/scripts/: build_index.py
LLM_para_Proyectos_en_Ciencia_de_Datos/rag/src/laundry_rag/: __init__.py  chunking.py  hybrid.py  ingestion.py  judge.py  paths.py  pdf_benchmark.py  reranking.py  retrieval.py  vectorstore.py
LLM_para_Proyectos_en_Ciencia_de_Datos/rag/tests/: test_chatbot.py  test_chatbot_service.py  test_chunking.py  test_experiments.py  test_ingestion.py  test_judge.py  test_pdf_benchmark.py  test_reranking.py  test_retrieval.py  test_vectorstore.py
LLM_para_Proyectos_en_Ciencia_de_Datos/sessions/: .env.example  README.md  pyproject.toml
LLM_para_Proyectos_en_Ciencia_de_Datos/sessions/config/: model_pricing.csv  models.yaml
LLM_para_Proyectos_en_Ciencia_de_Datos/sessions/data/labels/: expected_receipts_test.csv
LLM_para_Proyectos_en_Ciencia_de_Datos/sessions/notebooks/: 01_model_calls_instructor.ipynb  03_receipt_model_lab_instructor.ipynb
(+83 files in other folders)
