[project]
name = "enterprise-agent-chatbot"
version = "0.1.0"
description = "Chatbot empresarial multiagente con ADK, SQLite y MCP de búsqueda web."
requires-python = ">=3.12,<3.13"
dependencies = [
  "certifi>=2025.0.0",
  "google-adk>=1.0.0",
  "google-genai>=1.0.0",
  "mcp>=1.0.0",
  "pandas>=2.2.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.0",
  "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.6.0"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
