[project]
name = "ticket-agents-lab"
version = "0.1.0"
description = "Laboratorio reproducible de agentes ADK para gestión de tickets."
requires-python = ">=3.12,<3.13"
dependencies = [
  "certifi>=2024.0.0",
  "google-adk>=1.0.0",
  "google-genai>=1.0.0",
  "litellm>=1.63.0",
  "mlflow>=2.20.0",
  "orjson>=3.10.0",
  "pandas>=2.2.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.0",
  "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.6.0"]

[project.scripts]
ticket-agents = "ticket_agents.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
