[project]
name = "langgraph-mini-tutorial"
version = "0.1.0"
description = "Mini tutorial reproducible de flujos y agentes con LangGraph."
requires-python = ">=3.12,<3.13"
dependencies = [
  "langchain>=1.0.0",
  "langchain-openai>=0.3.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "python-dotenv>=1.0.0",
  "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
