[project]
name = "llm-metrics-course"
version = "0.1.0"
description = "Sesion 6: evaluacion y metricas para respuestas LLM y RAG."
requires-python = ">=3.12,<3.13"
dependencies = [
  "bert-score>=0.3.13",
  "google-genai>=1.0.0",
  "langchain-community>=0.3.27,<0.4.0",
  "ipykernel>=6.29.0",
  "ipywidgets>=8.1.0",
  "instructor[google-genai]>=1.14.0",
  "matplotlib>=3.9.0",
  "numpy>=1.26.0,<2.5",
  "pandas>=2.2.0",
  "python-dotenv>=1.0.0",
  "ragas>=0.4.0",
  "rouge-score>=0.1.2",
  "sacrebleu>=2.4.0",
  "scikit-learn>=1.5.0",
  "seaborn>=0.13.0",
  "sentence-transformers>=3.0.0",
  "transformers>=4.48.0",
  "torch>=2.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.8.0"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
