[project]
name = "session-2-architecture"
version = "0.1.0"
description = "Session 2 notebooks for LLM architecture, model selection, and receipt validation."
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=6.29.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.32.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "pillow>=10.4.0",
    "pytesseract>=0.3.13",
    "google-genai>=2.11.0",
    "matplotlib>=3.11.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
